Changelog
=========

4.8-dev - (unreleased)
----------------------

4.7 - (2011-11-29)
------------------
* Bug fix: Fixed keywords widget to keep filled values if the edit form fails to
  submit due to validation errors
  [voineali #4773]
* Bug fix: fix problem caused by redirections for Manager when creating QuickEvent [tiberich #4763]

4.6 - (2011-11-28)
------------------
* Bug fix: Fixed required themes, subject and location fields for specified content-types
  [voineali #4694]
* Bug fix: show only date in event_view and quickevent_view [tiberich #4763]

4.5 - (2011-11-28)
------------------
* Bug fix: Show description widget in edit mode for a quickevent [ichimdav #4789]
* Bug fix: Fixed event_view to use the old location widget
  [voineali #4736]

4.4 - (2011-11-25)
------------------
* Bug fix: Reverted location field/widget for QuickEvent and Organisation to
  eea.locationwidget as there is a lot of custom logic and it needs upgrade
  steps (same for /events map)
  [voineali #4736]

4.3 - (2011-11-23)
------------------
* Change: commented the eea.locationwidget widget for QuickEvent, as it is
  already provided by the geotags subtyper [tiberich #4763]
* Change: add instruction when editing location widgets [tiberich #4763]
* Bug fix: hide metadata fields for quickevent [tiberich #4763]
* Bug fix: make all fields appear in the default schemata [tiberich #4763]
* Bug fix: show location when viewing a QuickEvent [tiberich #4763]

4.2 - (2011-11-22)
------------------
* Cleanup: Fixed all pylint, pyflakes warnings
  [voineali]
* Bug fix: added workaround for failure to get filename for RSS enclosures
 [tiberich #4746]

4.1 - (2011-11-21)
------------------
* Bug fix: Removed themes from ExternalDataSpec schema as this CT gets themes
  from back references
  [voineali #4740]
* Bug fix: added header for rssAllowed script [tiberich #4738]
* Bug fix: make getModifiedDate return a DateTime object for folder based feeds [tiberich #4739]

4.0 - (2011-11-18)